--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -45,6 +45,15 @@
     <label for="inputConfirmPassword">Confirm password</label>
   </div>
 
+  <div class="form-group">
+    <label for="userType">User type</label>
+    <select class="form-control" name="type" id="userType">
+      <option value="1">Visitante</option>
+      <option value="2">Usuario</option>
+      <option value="3">Admin</option>
+    </select>
+  </div>
+
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   <p class="mt-5 mb-3 text-muted text-center">© {{year}}</p>
 </form>
