--- a/views/dashboard/index.hbs
+++ b/views/dashboard/index.hbs
@@ -1,6 +1,7 @@
 <main role="main" class="container">
   <div class="starter-template">
-    <h1>You are {{ user.name }}</h1>
+    <h1>You are {{ user.name }} with role: {{role}}</h1>
+    <a href="/app/users" class="btn btn-success">User list</a>
     <p>
       <a href="/logout">Cierra sesión</a>
     </p>
